[metadata]
name = kombu-worker
version = 0.0.0
description = Some basic utilities to manage AMQP queues
long_description = file: README.rst
keywords = AMQP, Connectomics
maintainer = Nicholas Turner
maintainer_email = nturner@zetta.ai
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    python_version>="3.7"
    kombu
    tenacity
    requests

[options.extras_require]
task-queue =
    task-queue
develop =
    black ==21.9.b0
    click ==8.0.1
    flake8 ==4.0.1
    mypy == 0.961
    pre-commit ==2.19.0
    pytest ==7.1.2
    task-queue
